manifests/ingress-hdfs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhdfs
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: "hdfs.lvh.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hadooop-hadoop-hdfs-nn
                port:
                  number: 9870
