manifests/ingress-yarn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webyarn
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: "yarn.lvh.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hadooop-hadoop-yarn-ui
                port:
                  number: 8088
